2025-01-13  Zhengyi Fu  <i@fuzy.me>

	* init.el: Enable `ultra-scroll-mode' if xinput2 is available.
	* packages.el: Add package `ultra-scroll'.

	* init.el: Set font of default face.
	(toggle-map): Bind `w' to `whitespace-mode'.
	(server-after-make-frame-hook): Add `+custom-fontset'.

	* early-init.el (default-frame-alist): Remove `font', `width' and
	`height'.

2025-01-12  Zhengyi Fu  <i@fuzy.me>

	* init.el: Increase `recentf-max-saved-items' to 8192.

2025-01-11  Zhengyi Fu  <zhengyi@fedora>

	* packages.el: Fix recipe of systemd-mode.

2025-01-10  Zhengyi Fu  <i@fuzy.me>

	* init.el (quilt-new-patch, quilt-add-visited-file)
	(quilt-refresh, quilt-pop, quilt-push): New commands.
	(quilt-prefix-map): Prefix map for quilt commands.

	* site-lisp/sftp.el: Refactor.
	(sftp-mode): New major mode.

	* early-init.el: Disable byte-compile of this file.
	Skip loading of site-start.el.
	Set `load-prefer-newer' to t.

	* site-lisp/consult-xref-apropos.el: Remove this rarely used
	package.

2025-01-09  Zhengyi Fu  <i@fuzy.me>

	* packages.el:
	* exde: Replace exwm-ns by ednc.

	* init.el: Update comments.
	Remove `with-editor' integration for `eat'.

	* site-lisp/pp-posframe.el: Change default binding for
	`pp-posframe-buffer' to `M-.'.

	* init.el: Remove hack for autoloading pixel-scroll.
	Set `scroll-conservatively' to 101.
	Do not disable poll for autorevert anymore.
	Refactor update font settings.

2025-01-08  Zhengyi Fu  <i@fuzy.me>

	* init.el: Autoload `consult-kill'.

	* site-lisp/consult-browser-hist.el (consult-browser-hist--format):
	Use `truncate-string-ellipsis' to truncate the title.

	* site-lisp/quick-window.el: Replace popon with posframe
	because of popon's bugs.

	* site-lisp/consult-xref-apropos.el:
	* site-lisp/consult-browser-hist.el: Use the default consult
	highlight function.

	* init.el: Set customized faces for emacs server.
	Ignore EGLOT buffers in consult-buffer.

	* site-lisp/consult-xref-apropos.el: Adapt to consult 1.10.
